<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LaunchPad 4</string>
    
    <string name="action_addTab">New Launch Tab</string>
    <string name="action_delTab">Delete Launch Tab</string>
    <string name="action_editTab">Select Apps for this Launch Tab</string>
    <string name="action_renTab">Rename Launch Tab</string>
    <string name="action_rearrange">Arrange Launch Tabs </string>
    <string name="action_tabName">Launch Tab Name: </string>
    <string name="action_sdPath">SD Path </string>
    <string name="action_addFolder">Add Launch Folder</string>
    <string name="action_delFolder">Delete Launch Folder</string>
    <string name="action_editFolder">Select Apps for this Launch Folder</string>
    <string name="action_renFolder">Rename Launch Folder</string>
    <string name="action_FolderName">Launch Folder Name: </string>  
    <string name="action_UNINSTALL">Uninstall Application</string> 
	<string name="action_DELFOLDER">Delete Folder</string>
	<string name="action_APPINFO">Application Info</string>
	<string name="action_FOLDERINFO">Edit Folder Items</string>
	<string name="action_REMOVEAPS">Remove Item</string>
    <string name="action_websearch">Web Aearch</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_grid">Show As Grid</string>
    <string name="action_list">Show As List</string>
    <string name="action_gridDoc">Show As Grid</string>
    <string name="action_listDoc">Show As List</string>
    <string name="action_alphSort">By Alpha</string>
    <string name="action_dateSort">By Install Date</string>
    <string name="action_freqSort">By Use Count</string>
    <string name="action_flow">Flow Transition</string>
    <string name="action_depth">Depth Transition</string>
    <string name="action_zoom">Zoom Transition</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_addfldr">Add Folder To Launch Tab</string>
    <string name="action_fldr">Add Folder</string>
    <string name="action_slide">Slide-Fade Transition</string>
    <string name="action_newprompt">Add New Launch Tab</string>
    <string name="action_notfound">LaunchPad Not Found"</string>
    <string name="action_categorize">Auto Categorize All Apps</string>
    <string name="action_showappname">Display App Name</string>
    <string name="action_hideappname">Hide App Name</string>
    <string name="action_DupFolder">Duplicate Folder - Cannot have two folders with the same name</string>   
    <string name="action_clearfreqs">Clear Frequent Tab</string>
    <string name="action_weatherURI">Weather HTML URL</string>

    <string name="tab_MyApps">My Launch Pads </string>
	<string name="tab_AllApps">-All My Apps </string>
	<string name="tab_FrqApps">-Frequent Apps </string>
	<string name="tab_NewApps">-New Apps </string>
	<string name="tab_MyDocs">-My Phone </string>
    <string name="tab_MySD">-My SD Card </string>
	<string name="tab_SelApps">Select Apps For:</string> 
	<string name="tab_Rename">Rename:</string>
	<string name="tab_Add">Add Folder To:</string>
	<string name="tab_Cancel">Cancel</string>
	<string name="tab_OK">OK</string>
    <string name="tab_DeviceStatus">-System </string>

    <string name="drawer_open">Open LaunchPad Drawer</string>
    <string name="drawer_close">Close LaunchPad Drawer</string>    
    <string name="menu_view">Select Apps Layout</string>
    <string name="menu_viewdoc">Select SD Layout</string>
    <string name="menu_page">Select Transition</string>
    <string name="menu_sort">Select Sort Method</string>
    <string name="menu_appname">Application Names</string>
    <string name="title_activity_edit">Select Apps For Launch Tab</string>
    <string name="categories">LaunchPads</string>
    <string name="category">LaunchPad</string>
    <string name="folder">Folder</string>
    <string name="title_activit_TabsList">Select LaunchPad</string>
    <string name="title_WidgetProvider">LaunchPad Shortcut</string>
    <string name="doedits1">LaunchPad cannot be changed!</string>
    <string name="doedits2">LaunchPad cannot be removed!</string>
    <string name="doprogress1">Loading application info…</string>
    <string name="doprogress2">Categorizing all apps… \n(as best we can) \n\nNote: This process needs an internet connection and may take some time.  Please be patient!</string>
    <string name="doprogress3">This will re-categorize all apps \n(as best we can)  \n\nNote: This process needs an internet connection and may take some time (but can be re-run anytime). So… Please be patient!</string>
    <string name="doprogress4">Remove this Launch Tab</string>
    <string name="doprogress5">Clear out the frequent use tab?</string>
    <string name="service_freq">Frequent Apps</string>
    <string name="service_uninstall">Uninstall App</string>
    <string name="service_remvoe">Remove From Launch Tab</string>
    <string name="service_mypad">My LaunchPad</string>
    <string name="service_allapps">All Apps</string>
    <string name="title_activity_folder_list">FolderList</string>

    <string name="sys_uptime">Up Time: %02d:%02d</string>
    <string name="sys_sleeptime">Sleep Time: %02d:%02d </string>
    <string name="sys_sdcard">SD Card:</string>
    <string name="sys_internalcard">Internal:</string>
    <string name="sys_mediavol">Media Volume:</string>
    <string name="sys_freemem">Sys Memory: %.0f MB </string>
    <string name="sys_network">Network: </string>
    <string name="sys_networknone">Network: none</string>
    <string name="sys_battery">Battery:  %.1f</string>
    <string name="sys_charging">Charging</string>
    <string name="sys_chargelow">LOW</string>
    <string name="sys_discharge">Discharging</string>
    <string name="sys_charged">Charged</string>

</resources>
